# softversko

./: .env.example  .gitignore  Dockerfile  README.md  Tehnicka_Specifikacija_v1.0.docx  Vanessa.py  disteekipa.py  docker-compose.yml  main.py  pyproject.toml  render.yaml  req.md  requirements.txt  uml.md  uml_class.puml  uml_sequence.puml  uml_use_case.puml
.github/workflows/: ci.yml
app/: auth.py  config.py  database.py  seed.py
app/models/: __init__.py  menu_item.py  order.py  user.py
app/routes/: __init__.py  auth.py  menu.py  orders.py  users.py
app/schemas/: __init__.py
frontend/: admin.html  app.js  index.html  styles.css
tests/: conftest.py  test_integration.py  test_main.py  test_unit.py
